* Added check is user logged before we show comment form in discussion module.
* Added CoursePress Endpoints to Apperance -> Menu screen.
* Fixed missing messages on login/signup form.
* Improved HTML login & signup forms.
* FIxed on signup form double error messages.
* Added check is safe_mode before call set_time_limit() function.

= 2.0.4 =
-------------------------------------------------
* Added ability to enroll, when we use course_join_button, but we are not logged.
* Added sanitization course id field in "course_join_button" shortcode.
* Added ability to save course state and exit.
* Added filter "coursepress_unit_add_open_date" to allow display open unit date.
* Added auto-creating missing directories for PDF certificates.
* Added ability to show "Withdraw" link on [cp_pages page="student_dashboard"].
* Added fields "Display Name", "Email" and "Registered" to "Student Profile" page.
* Added "Edit user" link on "Student Profile" page.
* Improved time count method for modules, pages and units.
* Improved login/signup popups for small screens.
* Improved integration with WooCommerce - when we change order status from completed to another status, a student will be withdrawn from the ordered courses.
* Limiting facilitator role, from now on it can only edit allowed courses.
* Improved the appearance of buttons on course frontend page.
* Improved "My Profile" screen.
* Delete related course data from a usermeta table when deleting a course.
* Improve "Student Profile" screen by adding a nonce check, to avoid any profile display.
* Improve login and signup screens for small screens.
* Fixed a problem with wrong courses on [cp_pages page="student_dashboard"].
* Fixed a "60 seconds" bug - when a module uses a timer, there was no chance to show different amount of seconds then "60".
* Fixed a bug with the sum of time for pages and units on course edit page.
* Fixed a bug related to the inability to disable CoursePress login form.